debsig-verify (0.20) UNRELEASED; urgency=medium

  * Update copyright years.
  * Expand GPLv2 brief notice in debsig-verify man page into the standard
    GPL-2+ notice.
  * Build system:
    - Add missing files to the distribution.
    - Generate the .dist-version when creating a dist tarball.
  * Packaging:
    - Bump Standard-Version to 4.4.1 (no changes needed).
    - Switch from debian/compat to debhelper-compat in Build-Depends.
    - Switch to debhelper compatibility level 12.
    - Switch to dh.

 -- Guillem Jover <guillem@debian.org>  Mon, 25 Feb 2019 01:15:01 +0100

debsig-verify (0.19) unstable; urgency=medium

  * Update Vcs information to point to new hosting.
  * Allocate pathname buffers dynamically to avoid possible silent truncation.
  * Build system:
    - Detect compiler flags availability at build-time.
  * Packaging:
    - Namespace debhelper files with package names.
    - Bump Standard-Version to 4.1.5 (no changes needed).
    - Move debhelper command arguments into fragment files.
    - Install all test policies into keyid example directories.

 -- Guillem Jover <guillem@debian.org>  Thu, 05 Jul 2018 12:50:11 +0200

debsig-verify (0.18) unstable; urgency=medium

  * Pass --no-auto-check-trustdb to the gpg invocations.
  * Add gpg as a alternative dependencies to gnupg, and gpg-agent or
    gnupg-agent as new Build-Depends, now that the package has been split
    in a more fine-grained way.
  * Use UTC0 instead of UTC when setting TZ.
  * Bump Standard-Version to 4.1.1 (no changes needed).
  * Add autopkgtest using the upstream test suite.
  * Set Rules-Requires-Root to no.
  * Set distribution tarball format to ustar.

 -- Guillem Jover <guillem@debian.org>  Sun, 05 Nov 2017 23:46:13 +0100

debsig-verify (0.17) unstable; urgency=medium

  * Spelling fixes. Thanks to Josh Soref <jsoref@gmail.com>.
  * Switch from libxmltok (expat 1.x) to libexpat (expat 2.x). The latter
    package is slightly bigger, but that is offset by being used by many